<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_settings">
        <EditTextPreference
            app:defaultValue="@string/default_url"
            app:key="upload_url"
            app:title="@string/upload_url"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="file"
            app:key="parameter"
            app:title="@string/parameter"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="api_key"
            app:title="@string/api_key"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="teknik"
            app:entries="@array/url_extractor"
            app:entryValues="@array/extractor_values"
            app:key="extractor"
            app:title="@string/url_extractor"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue='"url": ?"([^"]+)"'
            app:key="regex"
            app:title="@string/regex"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="prepend"
            app:title="@string/prepend"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/behaviour">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="open_browser"
            app:title="@string/open_browser"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="clipboard"
            app:title="@string/clipboard"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
